# knowledge-base

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  requirements.txt
.github/: dependabot.yml
data/: aac-high-sample-rate.yml  aac-missing-native-codec.yml  aac-wrong-length.yml  absolutely-positioned-inline-element-shifted.yml  ancestorOrigins.yml  apple-system-font-weights-inconsistent.yml  aria-attribute-reflection.yml  content-based-flex-basis-width-zero.yml  drawimage-fails-svg-no-width-height.yml  embed-pdf-android.yml  enable-by-default-setsinkid-pref.yml  example-cookie-samesite-lax.yml  grid-items-spanning-flexible-tracks.yml  justify-text-white-space-pre-wrap.yml  localStorage-quota-limit-exceeded.yml  margin-on-br-affects-layout-unlike-on.yml  marquee.yml  mkv-matroska-video-support.yml  mouse-events-disabled.yaml  netinfo.yml  number-input-spinner-appearance-none.yml  number-input-spinner-webkit-styling.yml  number-input-spinners-android.yml  overflow-overlay.yml  pointer-lock-pen-tablets.yml  pointer-lock-touchscreens.yml  popup-blocking-ux-papercuts.yml  preload-intermediates-android.yml  scrolling-inside-nested-fixed-positioned.yml  sidebar.yml  support-rtcrtpscripttransform.yml  svg-width-or-height-only-set-in-css.yml  svg-without-definite-size.yml  textinput.yml  webauthn-cable.yml  webauthn-ctap2.yml  webhid.yml  webrtc-videoinput-resolution-limit-macos.yml  webserial.yml  (+5 more)
docs/: core_bugs.html  (+3 more)
tools/kbcheck/: Cargo.toml
tools/kbcheck/src/: bugzilla.rs  data.rs  entry.rs  lib.rs  main.rs  score.rs  tranco.rs  updates.rs  validate.rs
(+16 files in other folders)
