[package]
name = "kbcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema="0.16"
serde="1"
serde_json="1"
serde_yaml="0.8"
walkdir = "2"
url={ version = "2", features = ["serde"] }
thiserror = "1"
clap = { version = "3.2.8", features = ["derive"] }
