[package]
name = "kbcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
jsonschema = "0.17"
miette = { version="5", features = ["fancy"] }
reqwest = "0.11"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
url = { version = "2", features = ["serde"] }
walkdir = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
